Todo: sometimes STRING is BYTE_ARRAY
