# main.go
@@ -34,6 +34,8 @@ func main() {
 	mux := http.NewServeMux()
 	mux.HandleFunc("/api/v1/query", queryHandler.handleQuery)
 	mux.HandleFunc("/api/v1/status", handleStatusCheck)
+	mux.HandleFunc("/api/v1/tables", handleTablesQuery)
+	mux.HandleFunc("/api/v1/tables/columns", handleTablesColumnsQuery)
 	mux.Handle("/swagger/", httpSwagger.WrapHandler)
 
 	handler := corsMiddleware(mux)
